Fix for Survivor routes REST pattern
